added jwt,rbac and swagger docs